<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pizzaninja.pizzaninja.ConfirmOrderActivity"
    tools:showIn="@layout/activity_confirm_order">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:text="@string/action_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textRemove1"
                    android:clickable="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginRight="15dp"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/item1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textItemName1"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/item1_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textItemCost1"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:text="@string/item1_top1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textItem1Topping1"
                android:layout_marginLeft="70dp"
                android:textSize="18sp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/item1_top2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textItem1Topping2"
                android:layout_marginLeft="70dp"
                android:textSize="18sp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/item1_top3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textItem1Topping3"
                android:layout_marginLeft="70dp"
                android:textSize="18sp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:text="@string/action_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textRemove2"
                    android:clickable="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginRight="15dp"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/item2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textItemName2"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/item2_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textItemCost2"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:text="@string/item2_top1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textItem2Topping1"
                android:layout_marginLeft="70dp"
                android:textSize="18sp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/item2_top2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textItem2Topping2"
                android:layout_marginLeft="70dp"
                android:textSize="18sp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
