<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pizzaninja.pizzaninja.RatingsActivity"
    tools:showIn="@layout/activity_ratings"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/store_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textStore"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="118dp"
            app:srcCompat="@drawable/pz4"
            android:id="@+id/imageStoreRating" />

        <TextView
            android:text="@string/drivers_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDrivers"
            android:paddingTop="50dp"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/driver_1"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:id="@+id/textDriver1"
                android:gravity="right|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@drawable/pz3"
                android:id="@+id/imageDriver1"
                android:scaleX=".5"
                android:scaleY=".5"
                android:layout_height="70dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/driver_2"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:id="@+id/textDriver2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:gravity="right|center_vertical" />

            <ImageView
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/pz5"
                android:id="@+id/imageDriver2"
                android:scaleX=".5"
                android:scaleY=".5"
                android:layout_height="70dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/driver_3"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:id="@+id/textDriver3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:gravity="right|center_vertical" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                app:srcCompat="@drawable/pz4"
                android:id="@+id/imageDriver3"
                android:layout_weight="1"
                android:scaleX=".5"
                android:scaleY=".5" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
