<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pizzaninja.pizzaninja.SpecialsActivity"
    tools:showIn="@layout/activity_specials">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <Button
            android:text="Confirm Order"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:id="@+id/btnConfirm"
            android:background="@color/colorPrimary"
            android:onClick="confirmOrder_click" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="151dp"
            app:srcCompat="@drawable/pizza2"
            android:id="@+id/imageItem1"
            android:paddingBottom="20dp" />

        <TextView
            android:text="@string/spec_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textItem1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_marginBottom="15dp" />

        <Button
            android:text="@string/action_add"
            android:id="@+id/buttonItem1"
            android:background="@color/colorPrimary"
            android:layout_height="40dp"
            android:layout_width="130dp"
            android:layout_marginBottom="50dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="162dp"
            app:srcCompat="@drawable/salad"
            android:id="@+id/imageItem2"
            android:scaleX=".75"
            android:scaleY=".75" />

        <TextView
            android:text="@string/spec_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textItem2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_marginBottom="15dp" />

        <Button
            android:text="@string/action_add"
            android:id="@+id/buttonItem2"
            android:background="@color/colorPrimary"
            android:layout_height="40dp"
            android:layout_width="130dp"
            android:layout_marginBottom="50dp"
            android:onClick="bigSalad_click" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
