<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pizzaninja.pizzaninja.MainMenu"
    tools:showIn="@layout/activity_main_menu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/foodbanner"
            android:id="@+id/foodbanner"
            android:layout_marginBottom="30dp"
            android:layout_height="205dp" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/TacoTan"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="5dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="?attr/colorPrimary"
                    android:textColorLink="?attr/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/TacoTan"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="66"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="?attr/colorPrimary"
                    android:textColorLink="?attr/colorPrimary"
                    android:textColorHint="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:text="Login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:textColor="@color/colorButtonText"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="Forgot Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linkForgotPassword"
            android:gravity="center_horizontal"
            android:textColor="@color/colorTextPrimary"
            android:paddingBottom="10dp"
            android:textSize="14sp" />

        <Button
            android:text="Create Account"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCreateAccount"
            android:textColor="@color/colorButtonText"
            android:layout_marginBottom="10dp" />

        <Button
            android:text="Continue as Guest"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLoginGuest"
            android:textColor="@color/colorButtonText" />
    </LinearLayout>

</RelativeLayout>
